Fixed Header alignment for admin, doctor and pharmacy

--- a/components/DoctorHeader/DoctorHeader.scss
+++ b/components/DoctorHeader/DoctorHeader.scss
@@ -1,71 +1,1 @@
 @import '~/assets/variables.scss';
-
-.reseta-header {
-  border-bottom: 1px solid $gray;
-  background-color: $white;
-  box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%),
-    0 1px 10px 0 rgb(0 0 0 / 12%);
-  height: 120px !important;
-  padding-top: 20px;
-}
-.notification-icon {
-  position: absolute;
-  right: 4%;
-}
-.search-icon {
-  position: absolute;
-  right: 17%;
-}
-.header-top {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 3fr 1fr;
-  padding: 12px;
-}
-.user {
-  text-align: center;
-  padding-right: 40px;
-}
-.logo-wide {
-  max-height: 60px;
-  height: 34px;
-  width: 35px;
-  margin: 0 auto;
-}
-.reseta-logo-text {
-  color: white !important;
-  font-size: 19px;
-  font-weight: 400;
-  align-self: center;
-  padding-left: 10px;
-}
-.sn-icons {
-  display: flex;
-  justify-content: center;
-}
-.sn-icons img {
-  width: 30px;
-  height: 30px;
-  border: 1px solid;
-  border-radius: 50%;
-  margin-left: 4px;
-  padding: 4px;
-}
-.v-toolbar__extension {
-  padding-top: 7px;
-  border-top: 1px solid;
-}
-.menu-icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-.menu-icon {
-  text-decoration: unset;
-  width: 100%;
-  text-align: center;
-  &.nuxt-link-exact-active.nuxt-link-active i {
-    color: $secondary-color;
-  }
-}
